# flask-junja2-alpinejs-start

./: .dockerignore  .env.sample  README.md  docker-compose.yml  main.py  pyproject.toml  run-dev.ps1  run-dev.sh  run-prod.sh  script.py
.idx/: dev.nix
.qoder/quests/: post-visualization.md  post-visualizationjsx.md
api/: __init__.py  login.py  profile.py
controllers/: __init__.py  dashboard.py  profile.py  users.py
http/: users.http
migrations/: 20250821.sql
src/: main.py
src/api/adm/: posts.py  profile.py  users.py
src/api/public/: login.py
src/controllers/adm/: dashboard.py  posts.py  profile.py
src/libs/: bcrypt_lib.py  jwt_lib.py  s3_lib.py
src/models/: posts.py  users.py
src/services/: posts_service.py
src/templates/adm/: posts.html  profile.html
src/templates/layouts/: html.html  template.html
src/templates/public/: login.html
static/: style.css
templates/: home.html  index.html  template.html
templates/layouts/: html.html  index.html  template.html  view.html
templates/pages/: dashboard.html  login.html  profile.html
